静的ページ（利用規約など）を作成

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<center>
+  <h1>マッスルキングへようこそ！</h1>
+  <h2>あなたの自慢の肉体を見せびらかせませんか？</h2>
+  <p>いいねの数でランキング上位を狙える！？</p>
+</center>
