--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'マッスルキングとは？', about_path %></li>
+        <li><%= link_to '新規登録(無料)', signup_path %></li>
         <li><%= link_to '利用規約', use_of_terms_path %></li>
       </ul>
     </nav>
