--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,22 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'マッスルキングとは？', about_path %></li>
-        <li><%= link_to '新規登録(無料)', signup_path %></li>
-        <li><%= link_to '利用規約', use_of_terms_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to 'ユーザー一覧', users_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              アカウント <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'プロフィール', current_user %></li>
+              <li class="divider"></li>
+              <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to '新規登録(無料)', signup_path %></li>
+          <li><%= link_to 'ログイン', login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
