画像の投稿機能

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -270,3 +270,9 @@ h2.training-name {
 .edit-training .delete-training {
   font-size: 15px;
 }
+
+.training-picture img {
+  max-width: 100%;
+  height: auto;
+  box-sizing: border-box;
+}
