--- a/app/views/trainings/edit.html.erb
+++ b/app/views/trainings/edit.html.erb
@@ -4,6 +4,11 @@
     <div class="col-md-6 col-md-offset-3">
       <%= form_for(@training) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
+        <span class="picture">
+          <%= f.label :picture %>　<span class="input-unneed">※任意</span>
+          <%= f.file_field :picture, accept: 'image/jpeg,image/png', class: 'form-control', id: 'training-picture' %>
+          <%= image_tag(@training.picture.thumb400.url) if @training.picture.url.present? %>
+        </span>
         <div class = 'form-group'>
           <%= f.label :name %>　<span class="input-need">※必須</span>
           <%= f.text_field :name, class: 'form-control', id: 'training_name' %>
