--- a/app/views/trainings/_training.html.erb
+++ b/app/views/trainings/_training.html.erb
@@ -6,6 +6,7 @@
     <%= link_to((image_tag training.picture.thumb200.url), training_path(training.id), class: 'training-picture') if training.picture.url.present? %>
   </span>
   <%= render 'users/favorite_form' %>
+  <%= render 'users/list_form' %>
   <span class="description"><%= training.description %></span><br>
   <span class="reference"><%= link_to "参考", training.reference, target: :_blank %></span>
   <span class="timestamp">
