--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -7,6 +7,7 @@
         <%= link_to((image_tag @training.picture.thumb400.url), training_path(@training.id), class: 'training-picture') if @training.picture.url.present? %>
       </span>
       <%= render 'users/favorite_form' %>
+      <%= render 'users/list_form' %>
     </div>
     <div class="col-md-8">
       <h2 class="training-name"><%= @training.name %></h2>
