--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -2,7 +2,7 @@
   <%= search_form_for @q do |f| %>
     <div class="col-md-10">
       <div class='form-group'>
-        <%= f.search_field :name_cont, placeholder: "筋トレメニュー名で検索", class: 'form-control font-awesome' %>
+        <%= f.search_field :name_cont, placeholder: "トレーニング名で検索", class: 'form-control font-awesome' %>
       </div>
     </div>
     <div class="col-md-2">
