--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,162 @@
 <% provide(:title, "マッスルキングとは？") %>
 <div id="fh5co-about">
   <div class="container">
-    <h1>マッスルキングとは？</h1>
+    <div class="row">
+      <div class="col-md-10">
+        <h1 class="title-about">マッスルキングとは？</h1>
+        <h4>　自分が毎日行っている筋トレメニューを、写真・コツ・説明などと一緒に記録できたり、他のユーザーが投稿した筋トレを参考にできるサービスです。</h4>
+      </div>
+      <div class="col-md-10">
+        <h2 class="title-use">主な使い方</h2>
+        <div>
+          <ol class="main-use">
+            <li class="A">自分オリジナル（または参考した）トレーニングを作成し、他のユーザに共有したり自分で使用したりする。</li>
+            <li class="B">自分または他のユーザーのトレーニングをマイ筋トレリストに入れ、オリジナルの筋トレメニューを作成し、使用する。</li>
+          </ol>
+        </div>
+        <p class="about-line"></p>
+        <ol class="main-use">
+          <li class="A">自分オリジナル（または参考した）トレーニングを作成し、他のユーザに共有したり自分で使用したりする。</li>
+        </ol>
+        <div class="use-content">
+          <p>　　自分がおすすめするトレーニングをどんどん登録して、日頃行うトレーニングの時に使用しましょう。</p>
+          <p>　　また、「ここの部位を鍛えたいけど、一番良いやり方ってなんだろう？」と思ったら、</p>
+          <p>　　他ユーザーが登録したトレーニングにいいのがないか、検索で調べてみよう。</p>
+        </div>
+        <ol class="how-to-use">
+          <li>新しいトレーニングを写真やメモと共に追加</li>
+          <div class="use-explanation">
+            <div class="row">
+              <div class="col-md-4">
+                <p>（1）「新しい筋トレメニューの登録」をクリックします。</p>
+                <%= image_tag("/images/useA-1-1.jpg", :alt => "useA-1-1", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（2）トレーニング情報を入力します。</p>
+                <%= image_tag("/images/useA-1-2.jpg", :alt => "useA-1-2", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（3）トレーニングの登録が完了しました！</p>
+                <%= image_tag("/images/useA-1-3.jpg", :alt => "useA-1-3", class: "use-picture") %>
+              </div>
+              <div class="col-md-8">
+                <p>トレーニングには下記の情報を登録することができます。</p>
+                <p>　・写真</p>
+                <p>　・トレーニング名</p>
+                <p>　・説明</p>
+                <p>　・コツ・ポイント</p>
+                <p>　・作り方参照用URL</p>
+              </div>
+            </div>
+          </div>
+          <li>作成したトレーニングを「お気に入りに登録」</li>
+          <div class="use-explanation">
+            <div class="row">
+              <div class="col-md-4">
+                <p>（1）「お気に入りに登録する」をクリックします。</p>
+                <%= image_tag("/images/useA-3-1.jpg", :alt => "useA-3-1", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（2）メニューから「お気に入り」をクリックします。</p>
+                <%= image_tag("/images/useA-3-2.jpg", :alt => "useA-3-2", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（3）お気に入り登録済みのトレーニングを見ることができます。</p>
+                <%= image_tag("/images/useA-3-3.jpg", :alt => "useA-3-3", class: "use-picture") %>
+              </div>
+            </div>
+          </div>
+          <li>登録済みの料理を「マイ筋トレリスト」に追加</li>
+          <div class="use-explanation">
+            <div class="row">
+              <div class="col-md-4">
+                <p>（1）「マイ筋トレリストに追加する」をクリックします。</p>
+                <%= image_tag("/images/useA-4-1.jpg", :alt => "useA-4-1", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（2）メニューから「マイ筋トレリスト」をクリックします。</p>
+                <%= image_tag("/images/useA-4-2.jpg", :alt => "useA-4-2", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（3）マイ筋トレリストに追加済みの料理を見ることができます。</p>
+                <%= image_tag("/images/useA-4-3.jpg", :alt => "useA-4-3", class: "use-picture") %>
+              </div>
+            </div>
+          </div>
+          <li>登録済みの料理を検索</li>
+          <div class="use-explanation">
+            <div class="row">
+              <div class="col-md-4">
+                <p>（1）検索バーを見つけます。</p>
+                <%= image_tag("/images/useA-5-1.jpg", :alt => "useA-5-1", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（2）探したい料理に関連するワード（例えば「肉」）を入力します。</p>
+                <%= image_tag("/images/useA-5-2.jpg", :alt => "useA-5-2", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（3）料理名か材料名に「肉」を含む料理の一覧が表示されます。</p>
+                <%= image_tag("/images/useA-5-3.jpg", :alt => "useA-5-3", class: "use-picture") %>
+              </div>
+            </div>
+          </div>
+        </ol>
+        <ol class="main-use">
+          <li class="B">家族内でのお料理レパートリー共有サービスとして使う</li>
+        </ol>
+        <div class="use-content">
+          <p>　　例えば母親をフォローすれば、母親の料理レパートリーを一覧で見ることができます。</p>
+          <p>　　食べて美味しかった料理をお気に入りに登録したり、コメントしたりできます。</p>
+          <p>　　「食べたい！」リクエストを送れば、料理を作った人の「作る予定リスト」に追加されます。</p>
+          <p>　　もちろん、自分で料理を作って登録することもできます。</p>
+        </div>
+        <ol class="how-to-use">
+          <li>料理にコメント（またはお気に入り登録）</li>
+          <div class="use-explanation">
+            <div class="row">
+              <div class="col-md-4">
+                <p>（1）料理のページへ飛び、コメントを入力します。</p>
+                <%= image_tag("/images/useB-1-1.jpg", :alt => "useB-1-1", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（2）コメントが追加されました！</p>
+                <%= image_tag("/images/useB-1-2.jpg", :alt => "useB-1-2", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（3）コメント追加（またはお気に入り登録）すると、料理を作った人の通知メニューが赤くなり通知されます。</p>
+                <%= image_tag("/images/useB-1-3.jpg", :alt => "useB-1-3", class: "use-picture") %>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <p>（4）料理を作った人にお気に入り登録があった旨の通知が届いています。</p>
+                <%= image_tag("/images/useB-1-4.jpg", :alt => "useB-1-4", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（5）料理を作った人にコメントがあった旨の通知が届いています。　　　</p>
+                <%= image_tag("/images/useB-1-5.jpg", :alt => "useB-1-5", class: "use-picture") %>
+              </div>
+            </div>
+          </div>
+          <li>料理に「食べたい！」リクエストを送る</li>
+          <div class="use-explanation">
+            <div class="row">
+              <div class="col-md-4">
+                <p>（1）食べたい料理の「食べたいリクエストを送る」をクリックします。</p>
+                <%= image_tag("/images/useB-2-1.jpg", :alt => "useB-2-1", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（2）料理を作った人がメニューから「作る予定リスト」をクリックします。</p>
+                <%= image_tag("/images/useB-2-2.jpg", :alt => "useB-2-2", class: "use-picture") %>
+              </div>
+              <div class="col-md-4">
+                <p>（3）「食べたいリクエスト」があったことがわかります。</p>
+                <%= image_tag("/images/useB-2-3.jpg", :alt => "useB-2-3", class: "use-picture") %>
+              </div>
+            </div>
+          </div>
+        </ol>
+      </div>
+    </div>
   </div>
 </div>
