--- a/app/views/trainings/new.html.erb
+++ b/app/views/trainings/new.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, "筋トレメニューの登録") %>
+<% provide(:title, "新しいトレーニングの登録") %>
 <div id="fh5co-portfolio">
   <div class="container">
-    <h1>筋トレメニューの登録</h1>
+    <h1>新しいトレーニングの登録</h1>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <%= render 'trainings/training_form' %>
