--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -3,7 +3,7 @@
             class: 'list',
             remote: true do %>
   <% if current_user == @training.user %>
-    <div class="list-btn-list"><i class="fas fa-list-alt"></i> 筋トレリストに追加する</div>
+    <div class="list-btn-list"><i class="fas fa-list-alt"></i> マイ筋トレリストに追加する</div>
   <% else %>
     <div class="list-btn-list"><i class="fas fa-utensils"></i> 真似したいリクエストを送る</div>
   <% end %>
