--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,1 @@
-("#favorite-<%= @training.id %>").html("<%= escape_javascript(render('users/unfavorite')) %>");
+$("#favorite-<%= @training.id %>").html("<%= escape_javascript(render('users/unfavorite')) %>");
