--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-xs-2">
           <div id="fh5co-logo">
-            <%= link_to(image_tag("/images/logo.jpg", :alt => "header-logo"), root_url, id: 'logo') %>
+            <%= link_to(image_tag("/images/logo.png", :alt => "header-logo"), root_url, id: 'logo') %>
           </div>
         </div>
         <div class="col-xs-10 text-right menu-1">
