--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -33,11 +33,11 @@
               </div>
               <div class="col-md-4">
                 <p>（2）トレーニング情報を入力します。</p>
-                <%= image_tag("/images/useA-1-2.jpg", :alt => "useA-1-2", class: "use-picture") %>
+                <%= image_tag("/images/useA-1-2.png", :alt => "useA-1-2", class: "use-picture") %>
               </div>
               <div class="col-md-4">
                 <p>（3）トレーニングの登録が完了しました！</p>
-                <%= image_tag("/images/useA-1-3.jpg", :alt => "useA-1-3", class: "use-picture") %>
+                <%= image_tag("/images/useA-1-3.png", :alt => "useA-1-3", class: "use-picture") %>
               </div>
               <div class="col-md-8">
                 <p>トレーニングには下記の情報を登録することができます。</p>
@@ -45,7 +45,7 @@
                 <p>　・トレーニング名</p>
                 <p>　・説明</p>
                 <p>　・コツ・ポイント</p>
-                <p>　・作り方参照用URL</p>
+                <p>　・参照用URL</p>
               </div>
             </div>
           </div>
@@ -54,61 +54,44 @@
             <div class="row">
               <div class="col-md-4">
                 <p>（1）「お気に入りに登録する」をクリックします。</p>
-                <%= image_tag("/images/useA-3-1.jpg", :alt => "useA-3-1", class: "use-picture") %>
+                <%= image_tag("/images/useA-3-1.png", :alt => "useA-3-1", class: "use-picture") %>
               </div>
               <div class="col-md-4">
                 <p>（2）メニューから「お気に入り」をクリックします。</p>
-                <%= image_tag("/images/useA-3-2.jpg", :alt => "useA-3-2", class: "use-picture") %>
+                <%= image_tag("/images/useA-3-2.png", :alt => "useA-3-2", class: "use-picture") %>
               </div>
               <div class="col-md-4">
                 <p>（3）お気に入り登録済みのトレーニングを見ることができます。</p>
-                <%= image_tag("/images/useA-3-3.jpg", :alt => "useA-3-3", class: "use-picture") %>
+                <%= image_tag("/images/useA-3-3.png", :alt => "useA-3-3", class: "use-picture") %>
               </div>
             </div>
           </div>
-          <li>登録済みの料理を「マイ筋トレリスト」に追加</li>
-          <div class="use-explanation">
-            <div class="row">
-              <div class="col-md-4">
-                <p>（1）「マイ筋トレリストに追加する」をクリックします。</p>
-                <%= image_tag("/images/useA-4-1.jpg", :alt => "useA-4-1", class: "use-picture") %>
-              </div>
-              <div class="col-md-4">
-                <p>（2）メニューから「マイ筋トレリスト」をクリックします。</p>
-                <%= image_tag("/images/useA-4-2.jpg", :alt => "useA-4-2", class: "use-picture") %>
-              </div>
-              <div class="col-md-4">
-                <p>（3）マイ筋トレリストに追加済みの料理を見ることができます。</p>
-                <%= image_tag("/images/useA-4-3.jpg", :alt => "useA-4-3", class: "use-picture") %>
-              </div>
-            </div>
-          </div>
-          <li>登録済みの料理を検索</li>
+          <li>登録済みのトレーニングを検索</li>
           <div class="use-explanation">
             <div class="row">
               <div class="col-md-4">
                 <p>（1）検索バーを見つけます。</p>
-                <%= image_tag("/images/useA-5-1.jpg", :alt => "useA-5-1", class: "use-picture") %>
+                <%= image_tag("/images/useA-5-1.png", :alt => "useA-5-1", class: "use-picture") %>
               </div>
               <div class="col-md-4">
-                <p>（2）探したい料理に関連するワード（例えば「肉」）を入力します。</p>
-                <%= image_tag("/images/useA-5-2.jpg", :alt => "useA-5-2", class: "use-picture") %>
+                <p>（2）探したいトレーニングに関連するワード（例えば「スクワット」）を入力します。</p>
+                <%= image_tag("/images/useA-5-2.png", :alt => "useA-5-2", class: "use-picture") %>
               </div>
               <div class="col-md-4">
-                <p>（3）料理名か材料名に「肉」を含む料理の一覧が表示されます。</p>
-                <%= image_tag("/images/useA-5-3.jpg", :alt => "useA-5-3", class: "use-picture") %>
+                <p>（3）トレーニング名に「スクワット」を含むトレーニングの一覧が表示されます。</p>
+                <%= image_tag("/images/useA-5-3.png", :alt => "useA-5-3", class: "use-picture") %>
               </div>
             </div>
           </div>
         </ol>
         <ol class="main-use">
-          <li class="B">家族内でのお料理レパートリー共有サービスとして使う</li>
+          <li class="B">自分または他のユーザーのトレーニングを「マイ筋トレリスト」に入れ、オリジナルの筋トレメニューを作成し、使用する。</li>
         </ol>
         <div class="use-content">
-          <p>　　例えば母親をフォローすれば、母親の料理レパートリーを一覧で見ることができます。</p>
-          <p>　　食べて美味しかった料理をお気に入りに登録したり、コメントしたりできます。</p>
-          <p>　　「食べたい！」リクエストを送れば、料理を作った人の「作る予定リスト」に追加されます。</p>
-          <p>　　もちろん、自分で料理を作って登録することもできます。</p>
+          <p>　　全体的に体を鍛えたいなら、「マイ筋トレリスト」に自分や他のユーザーが登録したトレーニングを入れよう。</p>
+          <p>　　「マイ筋トレリストに追加する」をクリックすれば、メニューにある「マイ筋トレリスト」に追加されます。</p>
+          <p>　　もちろん、自分で登録したトレーニングも「マイ筋トレリスト」に追加することもできます。</p>
+          <p>　　トレーニングにはコメントすることができます。</p>
         </div>
         <ol class="how-to-use">
           <li>料理にコメント（またはお気に入り登録）</li>
