--- a/app/views/comments/_new_form.html.erb
+++ b/app/views/comments/_new_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@comment) do |f| %>
+<%= form_with(model: @comment, local: true) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <%= hidden_field_tag :training_id, @training.id %>
   <div class="row">
