--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <%= form_with(model: @user, url: password_reset_path(params[:id]), local: true) do |f| %>
-          <%= render 'shared/error_messages' %>
+          <%= render 'shared/error_messages', object: f.object %>
 
           <%= hidden_field_tag :email, @user.email %>
 
@@ -13,7 +13,7 @@
             <%= f.label :password %>
             <%= f.password_field :password, class: 'form-control' %>
 
-            <%= f.label :password_confirmation, "Confirmation" %>
+            <%= f.label :password_confirmation %>
             <%= f.password_field :password_confirmation, class: 'form-control' %>
           </div>
           <%= f.submit 'パスワードの更新', class: 'btn btn-primary' %>
