--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
     <%= link_to "プロフィール編集", edit_user_path %>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <%= form_for(@user) do |f| %>
+        <%= form_with(model: @user, local: true) do |f| %>
           <%= render 'shared/error_messages', object: f.object %>
         <div class="gravatar_edit">
           <%= gravatar_for(@user, size: 40) %>
