--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,8 +4,8 @@
     <h1>新規登録</h1>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <%= form_with model: @user, local: true do |f| %>
-          <%= render 'shared/error_messages', object: f.object %>
+        <%= form_with(model: @user, local: true) do |f| %>
+          <%= render 'shared/error_messages',  object: f.object %>
           <div class = 'form-group'>
             <%= f.label :name %>
             <%= f.text_field :name, class: 'form-control', id: 'user_name' %>
