カレンダーの実装

--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "お気に入り") %>
 <% @training = Training.find(favorite.training_id) %>
 <% user = @training.user %>
 <li id="favorite-<%= favorite.id %>">
