--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -23,6 +23,9 @@
               <li class="header-link">
                 <%= link_to lists_path do %><span class="fas fa-list-alt"></span> <span>マイ筋トレリスト</span><% end %>
               </li>
+              <li class="header-link">
+                <%= link_to records_path do %><span class="fas fa-calendar-alt"></span> <span>カレンダー</span><% end %>
+              </li>
               <li class="has-dropdown">
                 <%= link_to current_user do %>
                   <span class="fas fa-user-cog"></span>
