--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "マイ筋トレリスト") %>
 <% @list = list %>
 <% @training = Training.find(list.training_id) %>
 <li id="list-<%= @training.id %>">
