--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  * require_tree .
  * require_self
+ *= require simple_calendar
  *= require animate.css
  *= require icomoon.css
  *= require bootstrap.css
