--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -567,3 +567,31 @@ a.list, a.unlist {
 .list-button {
   margin-bottom: 20px;
 }
+
+// カレンダー
+.simple-calendar {
+  .day {}
+  .wday-0 {}
+  .wday-1 {}
+  .wday-2 {}
+  .wday-3 {}
+  .wday-4 {}
+  .wday-5 {}
+  .wday-6 {}
+  .today {}
+  .past {}
+  .future {}
+  .start-date {}
+  .prev-month {}
+  .next-month { }
+  .current-month {}
+  .has-events {
+    background: #98fb98;
+  }
+ }
+h2.section-top {
+  text-align: center;
+  margin-bottom: 50px;
+  font-weight: 600;
+  text-decoration-color: red;
+}
