--- a/app/views/trainings/_training.html.erb
+++ b/app/views/trainings/_training.html.erb
@@ -7,6 +7,7 @@
       </span>
       <%= render 'users/favorite_form' %>
       <%= render 'users/list_form' %>
+      <%= render 'users/like_form' %>
     </div>
     <div class="col-md-8 escape-float">
       <h3 class="training-name"><%= link_to training.name, training_path(training) %></h3>
