--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -9,6 +9,7 @@
         </span>
         <%= render 'users/favorite_form' %>
         <%= render 'users/list_form' %>
+        <%= render 'users/like_form' %>
       </div>
       <div class="col-md-8">
         <h2 class="training-name"><%= @training.name %></h2>　　
