--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,6 +10,9 @@
         <div class="col-xs-10 text-right menu-1">
           <ul>
             <% if logged_in? %>
+              <li class="header-link">
+                <%= link_to likes_path do %><span class="fas fa-thumbs-up"></span> <span>いいねランキング</span><% end %>
+              </li>
               <% if current_user.notification == true %>
                 <li class="new_notification header-link">
               <% else %>
