--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,9 +1,10 @@
 <div id="fh5co-portfolio">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <h3>　通知一覧</h3>
-      </div>
+      <h2 class="section-top">
+        <span class="fas fa-bell" aria-hidden="true"></span>
+        通知一覧
+      </h2>
     </div>
     <% if @notifications.present? %>
       <ol class="notifications">
