--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -2,19 +2,19 @@
 <div class="container-fluid">
 	<h2 class="section-top"><span class="fas fa-dumbbell" aria-hidden="true"></span> トレーニング記録カレンダー</h2>
 	<div class="col-md-3 col-sm-12 col-xs-12">
-    <%= form_for(@record) do |f| %>
+    <%= form_with(model: @record, local: true) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
     <div class="field row">
-      <label for="record_menu">トレーニング名　※必須</label>
+      <%= f.label :menu %> <span class="input-need">※必須</span>
       <p><%= f.text_field :menu, id: 'record_menu' %></p>
-      <label for="record_weight">重量(kg) ※任意</label>
+      <%= f.label :weight %>　<span class="input-unneed">※任意</span>
       <p><%= f.select :weight, [*(0..200)], id: 'record_weight' %></p>
-      <label for="record_rep">回数　※任意</label>
+      <%= f.label :rep %>　<span class="input-unneed">※任意</span>
       <p><%= f.select :rep, [*(1..100)], id: 'record_rep' %></p>
-      <label for="record_set">セット数　※任意</label>
+      <%= f.label :set %>　<span class="input-unneed">※任意</span>
       <p><%= f.select :set, [*(1..30)], id: 'record_set' %></p>
-      <label for="record_start_time">トレーニング日　※任意</label>
-      <p><%= f.date_field :start_time, id: 'record_start_time' %></p>
+      <%= f.label :start_time %>　<span class="input-unneed">※任意</span>
+      <p><%= f.datetime_field :start_time, value: Time.current.beginning_of_day.strftime('%Y-%m-%dT%T'), id: 'record_start_time' %></p>
     </div>
     <div class="actions row">
       <%= f.submit "記録する", class: "btn btn-sm btn-hachiss" %>
@@ -50,7 +50,7 @@
 						<td><%= user.weight%>kg</td>
 						<td><%= user.rep%>rep</td>
 						<td><%= user.set%>set</td>
-						<td><%= user.start_time.strftime("%Y-%m-%d %H:%M")%></td>
+						<td><%= user.start_time%></td>
 						<td><%=link_to "編集" , edit_record_path(user),:class=>"btn04"  %></td>
 						<td><%=link_to "削除",record_path(user) , method: :delete , data: {confirm:"削除しますか"} ,:class=>"btn03"%></td>
 					</tr>
