--- a/app/views/users/_like.html.erb
+++ b/app/views/users/_like.html.erb
@@ -1,6 +1,9 @@
 <%= link_to "/likes/#{@training.id}/create",
             method: :post,
-            class: 'good',
+            class: 'like',
             remote: true do %>
-    <div class="good-btn-good"><i class="fas fa-heart"></i>いいねする</div>
+    <div class="like-btn-like">
+      <i class="fas fa-thumbs-up"></i>
+      <%= @training.likes.count %>
+    </div>
 <% end %>
