--- a/app/views/users/_unfavorite.html.erb
+++ b/app/views/users/_unfavorite.html.erb
@@ -1,6 +1,6 @@
 <%= link_to "/favorites/#{@training.id}/destroy",
             method: :delete,
-            class: 'unlike',
+            class: 'unfavorite',
             remote: true do %>
-  <div class="like-btn-unlike"><i class="fa fa-heart"></i> お気に入りに登録済み</div>
+  <div class="favorite-btn-unfavorite"><i class="fa fa-heart"></i> お気に入りに登録済み</div>
 <% end %>
