--- a/app/views/users/_unlike.html.erb
+++ b/app/views/users/_unlike.html.erb
@@ -1,7 +1,10 @@
 <% like = Like.find_by(training_id: @training.id) %>
 <%= link_to "/likes/#{like.id}/destroy",
             method: :delete,
-            class: 'ungood',
+            class: 'unlike',
             remote: true do %>
-  <div class="good-btn-ungood"><i class="fas fa-like-alt"></i>いいねをはずす</div>
+  <div class="like-btn-unlike">
+    <i class="fas fa-thumbs-up"></i>
+    <%= @training.likes.count %>
+  </div>
 <% end %>
