--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,8 +20,9 @@
         <div class="col-md-8 col-md-offset-2 text-center">
           <div class="display-t js-fullheight">
             <div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-              <h1>ユーザーが投稿した<br>トレーニングを保存しよう！</h1>
+              <h1>おすすめの筋トレを<br>登録や共有をしてみよう！！</h1>
               <h2>自分オリジナルの筋トレメニューを作成！</h2>
+              <h2>筋トレ初心者の方におすすめ！</h2>
               <p>
                 <%= link_to 'マッスルキングを始める', signup_path, class: "btn btn-primary btn-lg btn-demo" %>
               </p>
@@ -31,4 +32,89 @@
       </div>
     </div>
   </header>
+
+  <div id="fh5co-features">
+		<div class="container">
+			<div class="services-padding">
+				<div class="row">
+					<div class="col-md-4 animate-box">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="fas fa-dumbbell"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>Training</h3>
+								<p>自分がおすすめするトレーニングを登録！</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-4 animate-box">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="fas fa-heart"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>Favorite</h3>
+								<p>特に良いと思ったトレーニングをお気に入り登録！</p>
+							</div>
+						</div>
+
+					</div>
+					<div class="col-md-4 animate-box">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="fas fa-thumbs-up"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>Good</h3>
+								<p>登録されているトレーニングに「いいね！」</p>
+                <p>いいねが多ければランキングに載ることも！？</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="row">
+					<div class="col-md-4 animate-box">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="fas fa-list-alt"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>List</h3>
+								<p>登録されているトレーニングを「マイ筋トレリスト」に保存！</p>
+							</div>
+						</div>
+
+					</div>
+
+					<div class="col-md-4 animate-box">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="fas fa-calendar-alt"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>Calendar</h3>
+								<p>カレンダーにトレーニングの回数、持ち上げた重量などを記録！</p>
+							</div>
+						</div>
+
+					</div>
+					<div class="col-md-4 animate-box">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="fas fa-comment"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>Comment</h3>
+								<p>トレーニングにコメントができる！トレーニング内容の反応を確認！</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 <% end %>
