--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -12,6 +12,7 @@
           <ol class="main-use">
             <li class="A">自分オリジナル（または参考した）トレーニングを作成し、他のユーザに共有したり自分で使用したりする。</li>
             <li class="B">自分または他のユーザーのトレーニングをマイ筋トレリストに入れ、オリジナルの筋トレメニューを作成し、使用する。</li>
+            <li class="C">他にも、「いいねランキング」や「トレーニング記録カレンダー」機能も使用できます。</li>
           </ol>
         </div>
         <p class="about-line"></p>
@@ -21,7 +22,7 @@
         <div class="use-content">
           <p>　　自分がおすすめするトレーニングをどんどん登録して、日頃行うトレーニングの時に使用しましょう。</p>
           <p>　　また、「ここの部位を鍛えたいけど、一番良いやり方ってなんだろう？」と思ったら、</p>
-          <p>　　他ユーザーが登録したトレーニングにいいのがないか、検索で調べてみよう。</p>
+          <p>　　他ユーザーが登録したトレーニングにいいのがないか、検索で調べることもできます。</p>
         </div>
         <ol class="how-to-use">
           <li>新しいトレーニングを写真やメモと共に追加</li>
@@ -91,54 +92,48 @@
           <p>　　全体的に体を鍛えたいなら、「マイ筋トレリスト」に自分や他のユーザーが登録したトレーニングを入れよう。</p>
           <p>　　「マイ筋トレリストに追加する」をクリックすれば、メニューにある「マイ筋トレリスト」に追加されます。</p>
           <p>　　もちろん、自分で登録したトレーニングも「マイ筋トレリスト」に追加することもできます。</p>
-          <p>　　トレーニングにはコメントすることができます。</p>
+          <p>　　また、トレーニングにはコメントやいいねすることができます。</p>
         </div>
         <ol class="how-to-use">
-          <li>料理にコメント（またはお気に入り登録）</li>
+          <li>トレーニングにコメント（又はいいね）</li>
           <div class="use-explanation">
             <div class="row">
               <div class="col-md-4">
-                <p>（1）料理のページへ飛び、コメントを入力します。</p>
-                <%= image_tag("/images/useB-1-1.jpg", :alt => "useB-1-1", class: "use-picture") %>
+                <p>（1）トレーニングの詳細ページへ移り、コメントを入力します。</p>
+                <%= image_tag("/images/useB-1-1.png", :alt => "useB-1-1", class: "use-picture") %>
               </div>
               <div class="col-md-4">
                 <p>（2）コメントが追加されました！</p>
-                <%= image_tag("/images/useB-1-2.jpg", :alt => "useB-1-2", class: "use-picture") %>
+                <%= image_tag("/images/useB-1-2.png", :alt => "useB-1-2", class: "use-picture") %>
               </div>
               <div class="col-md-4">
-                <p>（3）コメント追加（またはお気に入り登録）すると、料理を作った人の通知メニューが赤くなり通知されます。</p>
-                <%= image_tag("/images/useB-1-3.jpg", :alt => "useB-1-3", class: "use-picture") %>
+                <p>（3）コメント追加（又はいいね、お気に入り）すると、トレーニングを登録した人の通知メニューが赤くなり通知されます。</p>
+                <%= image_tag("/images/useB-1-3.png", :alt => "useB-1-3", class: "use-picture") %>
               </div>
             </div>
             <div class="row">
               <div class="col-md-4">
-                <p>（4）料理を作った人にお気に入り登録があった旨の通知が届いています。</p>
-                <%= image_tag("/images/useB-1-4.jpg", :alt => "useB-1-4", class: "use-picture") %>
+                <p>（4）トレーニングを登録した人にコメントがあった旨の通知が届いています。</p>
+                <%= image_tag("/images/useB-1-4.png", :alt => "useB-1-4", class: "use-picture") %>
               </div>
               <div class="col-md-4">
-                <p>（5）料理を作った人にコメントがあった旨の通知が届いています。　　　</p>
-                <%= image_tag("/images/useB-1-5.jpg", :alt => "useB-1-5", class: "use-picture") %>
-              </div>
-            </div>
-          </div>
-          <li>料理に「食べたい！」リクエストを送る</li>
-          <div class="use-explanation">
-            <div class="row">
-              <div class="col-md-4">
-                <p>（1）食べたい料理の「食べたいリクエストを送る」をクリックします。</p>
-                <%= image_tag("/images/useB-2-1.jpg", :alt => "useB-2-1", class: "use-picture") %>
+                <p>（5）トレーニングを登録した人にいいねがあった旨の通知が届いています。　　　</p>
+                <%= image_tag("/images/useB-1-5.png", :alt => "useB-1-5", class: "use-picture") %>
               </div>
               <div class="col-md-4">
-                <p>（2）料理を作った人がメニューから「作る予定リスト」をクリックします。</p>
-                <%= image_tag("/images/useB-2-2.jpg", :alt => "useB-2-2", class: "use-picture") %>
-              </div>
-              <div class="col-md-4">
-                <p>（3）「食べたいリクエスト」があったことがわかります。</p>
-                <%= image_tag("/images/useB-2-3.jpg", :alt => "useB-2-3", class: "use-picture") %>
+                <p>（6）トレーニングを登録した人にお気に入りがあった旨の通知が届いています。　　　</p>
+                <%= image_tag("/images/useB-1-6.png", :alt => "useB-1-6", class: "use-picture") %>
               </div>
             </div>
           </div>
         </ol>
+        <ol class="main-use">
+          <li class="C">他にも、「いいねランキング」や「トレーニング記録カレンダー」機能も使用できます。</li>
+        </ol>
+        <div class="use-content">
+          <p>　いいねが多いトレーニングは「いいねランキング」に載ります（5つまで）。</p>
+          <p>「トレーニング記録カレンダー」では、トレーニング名、回数、重量を記録することができます。</p>
+        </div>
       </div>
     </div>
   </div>
