--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -4,6 +4,7 @@
     <% if @search_word.present? %>
       <h3>”<%= @search_word %>”の検索結果：<%= @trainings.count %>件</h3>
     <% else %>
+      <h3>該当する検索ワードはありませんでした。</h3>
       <h3>トレーニング一覧</h3>
     <% end %>
     <ul class="trainings">
